--- a/scss/_swiper_mod.scss
+++ b/scss/_swiper_mod.scss
@@ -1,10 +1,6 @@
 .swiper-container {
-  width: 100%;
-  height: 100%;
-}
-
-.swiper-margin {
-  margin: 2rem 0;
+  @include container;
+  padding: 2rem 0;
 }
 
 .swiper-slide {
